use-cases-custom/uc3-ws/01-uc3-backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uc3-custom
---
apiVersion: v1
kind: Service
metadata:
  name: uc3-backend
  namespace: uc3-custom
  labels:
    app: uc3-backend
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 80
  selector:
    app: uc3-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uc3-backend
  namespace: uc3-custom
spec:
  replicas: 3
  selector:
    matchLabels:
      app: uc3-backend
  template:
    metadata:
      labels:
        app: uc3-backend
    spec:
      serviceAccountName: uc3-backend
      containers:
      - name: uc3-backend
        image: ealen/echo-server:latest
        ports:
        - containerPort: 80
