use-cases-custom/uc3-ws/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: mtls-gateway
  namespace: default
spec:
  gatewayClassName: tigera-gateway-class
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    hostname: terminate.example.com
    tls:
      mode: Terminate
      certificateRefs:
      - group: ""
        kind: Secret
        name: terminate-example-tls-cert
      frontendValidation:
        caCertificateRefs:
        - group: ""
          kind: Secret
          name: client-ca-cert
    allowedRoutes:
      namespaces:
        from: All
