use-cases-custom/uc3-ws/03-httproute-header-modifier.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mtls-route
  namespace: uc3-custom
spec:
  parentRefs:
  - name: mtls-gateway
    namespace: default
  hostnames:
  - "terminate.example.com"
  rules:
  - backendRefs:
    - name: uc3-backend
      port: 3000
