use-cases-custom/uc3-ws/03-httproute-traffic-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: uc3-custom-session-affinity
  namespace: uc3-custom
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: uc3-custom
  loadBalancer:
    type: ConsistentHash
    consistentHash:
      type: Cookie
      cookie:
        name: route
        attributes:
          path: /
          sameSite: Lax
        ttl: 14400s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mtls-route
  namespace: uc3-custom
spec:
  parentRefs:
  - name: mtls-gateway
    namespace: default
    sectionName: https
  hostnames:
  - "terminate.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: uc3-backend
      port: 3000
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        add:
        - name: X-Forwarded-Client-Cert
          value: "%DOWNSTREAM_PEER_CERTIFICATE%"
